src/objects/ffbf__BankFormatMapping__c.object
<CustomObject>
    <fields>
        <fullName>ffbf__BankFormatDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Format Definition</label>
        <referenceTo>ffbf__BankFormatDefinition__c</referenceTo>
        <relationshipLabel>Bank Format Mappings</relationshipLabel>
        <relationshipName>BankFormatMappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbf__DateFormat__c</fullName>
        <label>Date Format</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__DecimalSeparator__c</fullName>
        <label>Decimal Separator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>,</fullName>
                </value>
                <value>
                    <fullName>.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffbf__DefinitionExternalId__c</fullName>
        <formula>ffbf__BankFormatDefinition__r.ffbf__ExternalId__c</formula>
        <label>Definition External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__RootSourceObject__c</fullName>
        <label>Root Source Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__ThousandsSeparator__c</fullName>
        <label>Thousands Separator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>,</fullName>
                </value>
                <value>
                    <fullName>.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Bank Format Mapping</label>
    <listViews>
        <fullName>ffbf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Format Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>